--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,5 +2,9 @@ name = "ninja-slicer"
 main = "worker/index.ts"
 compatibility_date = "2024-01-01"
 
+routes = [
+  { pattern = "ninja.menuhub.me", custom_domain = true }
+]
+
 [site]
 bucket = "./dist"
